--- a/TA1/style/main.css
+++ b/TA1/style/main.css
@@ -1,5 +1,5 @@
 @font-face {font-family: "Gilroy SemiBold"; src: url("//db.onlinewebfonts.com/t/000833a3a58fb083c44b9de42c2ff0a2.eot"); src: url("//db.onlinewebfonts.com/t/000833a3a58fb083c44b9de42c2ff0a2.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/000833a3a58fb083c44b9de42c2ff0a2.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/000833a3a58fb083c44b9de42c2ff0a2.woff") format("woff"), url("//db.onlinewebfonts.com/t/000833a3a58fb083c44b9de42c2ff0a2.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/000833a3a58fb083c44b9de42c2ff0a2.svg#Gilroy SemiBold") format("svg"); }
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap');
 
 * {
@@ -16,8 +16,12 @@ body{
     top: 0px;
 }
 
+a{
+    text-decoration: none;
+}
+
 .corpo{
-    margin-top: 15%;
+    margin-top: -6%;
     background: #040D3E;
 }
 
@@ -64,6 +68,7 @@ button{
     text-align: center;
     border-radius: 3px;
     cursor: pointer;
+    font-weight: 500;
 }
 
 .btn1{
@@ -122,8 +127,25 @@ h2{
     margin-left: 10%;
     margin-top: 15px;
     width: 468px;
-height: 44px;
+    height: 44px;
+}
 
+h3{
+    font-family: 'Rubik', sans-serif;
+    font-size: 16px;
+    line-height: 137%;
+    color: #8476AA;
+    font-weight: 400;
+    width: 380px;
+}
+
+h4{
+    font-family: 'Rubik', sans-serif;
+    font-size: 14px;
+    line-height: 157%;
+    color: #6D6D78;
+    font-weight: 400;
+    text-decoration: none;
 }
 
 .title-main{
@@ -138,4 +160,81 @@ height: 44px;
     left: 45%;
     top: 20%;
    
+}
+.container-3 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 80px;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    margin-top: 10%;
+}
+
+.form-title{
+    font-family: "Gilroy SemiBold";
+    font-size: 24px;
+    line-height: 122%;
+    color: #8476AA;
+    width: 268px;
+    height: 49px;
+    text-align: center;
+    display: inline;
+    margin-left: 0px
+}
+
+label{
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    line-height: 114%;
+    color: #99EFD0;
+}
+
+.form-box{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-content: flex-end;
+}
+
+.btn-submit{
+    background-color: #F2994A;
+    color: white;
+    border: 2px solid #F2994A;
+    font-family: 'Rubik', sans-serif;
+    box-shadow: -11.09px 18.13px 36.6483px rgba(242, 153, 74, 0.13);
+    width: 95px;
+    height: 35px;
+
+}
+
+.btn-azul{
+    background-color: transparent;
+    color: #F2994A;
+    border: 2px solid #F2994A;
+    font-family: 'Rubik', sans-serif;
+    margin-left: 20px;
+    width: 157px;
+    height: 46px;
+}
+
+.btn-apagar{
+    background-color: transparent;
+    color: #F2994A;
+    border: 2px solid #F2994A;
+    font-family: 'Rubik', sans-serif;
+    margin-left: 20px;
+    width: 157px;
+    height: 46px;
 }
