--- a/TA1/style/main.css
+++ b/TA1/style/main.css
@@ -9,20 +9,28 @@
 }
 
 body{
-    background: linear-gradient(187.26deg, #3B1D60 11.22%, #040D3E 82.28%);
+/*     background: linear-gradient(187.26deg, #3B1D60 11.22%, #040D3E 82.28%);
    background-repeat: no-repeat;
     height: 100vh;
     left: 0px;
-    top: 0px;
+    top: 0px; */
+
+    background: #040D3E;
 }
 
 a{
     text-decoration: none;
 }
 
-.corpo{
-    margin-top: -6%;
-    background: #040D3E;
+
+
+header {
+    background: linear-gradient(187.26deg, #3B1D60 11.22%, #040D3E 82.28%);
+   background-repeat: no-repeat;
+   position: relative;
+   padding-top: 10px;
+
+
 }
 
 header .container{
@@ -33,6 +41,7 @@ header .container{
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 80px;
+    
     
 }
 
@@ -266,6 +275,8 @@ footer{
     background-color: #3B1D60;
     height: 13vh;
     align-items: center;
+    width: 100%;
+    bottom: 0px;
 }
 
 .estouNoChao{
