--- a/TA1/style/sobre.css
+++ b/TA1/style/sobre.css
@@ -69,9 +69,6 @@
     justify-content: center;
 }
 
-.title-main{
-    display:flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
+.title-main-sobre{
+  margin-bottom: 10%;
 }
